
- Changed namespaced classes so that the ctor can only be named
  __construct now. (Stas)
- Reset error state in PDO::beginTransaction() reset error state. (Ilia)

- Implemented FR#35638 (Adding udate to imap_fetch_overview results).
  (Charles_Duffy at dell dot com )
- Fixed possible buffer overflows in mysqlnd_list_fields,  mysqlnd_change_user.
  (Andrey)
- Fixed very rare memory leak in mysqlnd, when binding thousands of columns.
  (Andrey)

- Fixed a possible dechunking filter buffer overflow. Reported by Stefan Esser.
  (Pierre)
- Fixed a possible arbitrary memory access inside sqlite extension. Reported 
  by Mateusz Kocielski. (Ilia)
- Fixed string format validation inside phar extension. Reported by Stefan
  Esser (Ilia)
- Fixed handling of session variable serialization on certain prefix
  characters. Reported by Stefan Esser (Ilia)
- Fixed a NULL pointer dereference when processing invalid XML-RPC
  requests (Fixes CVE-2010-0397, bug #51288). (Raphael Geissert)
- Fixed 64-bit integer overflow in mhash_keygen_s2k(). (Clément LECIGNE, Stas)

- Fixed bug #51671 (imagefill does not work correctly for small images).
  (Pierre)
- Fixed bug #51670 (getColumnMeta causes segfault when re-executing query
  after calling nextRowset). (Pierrick)
- Fixed bug #51647 Certificate file without private key (pk in another file)
  doesn't work. (Andrey)
- Fixed bug #51629 (CURLOPT_FOLLOWLOCATION error message is misleading).
  (Pierre)
- Fixed bug #51627 (script path not correctly evaluated).
  (russell dot tempero at rightnow dot com)
- Fixed bug #51624 (Crash when calling mysqli_options()). (Felipe)
- Fixed bug #51615 (PHP crash with wrong HTML in SimpleXML). (Felipe)
- Fixed bug #51609 (pg_copy_to: Invalid results when using fourth parameter).
  (Felipe)
- Fixed bug #51608 (pg_copy_to: WARNING: nonstandard use of \\ in a string
  literal). (cbandy at jbandy dot com)
- Fixed bug #51607 (pg_copy_from does not allow schema in the tablename